--- a/galereya.html
+++ b/galereya.html
@@ -7,7 +7,7 @@
         <div id="navbar">
             <nav>
                 <td>
-                    <li><a href="./osn.html">Главная</a></li>
+                    <li><a href="./index.html">Главная</a></li>
                     <li><a href="#info-container">Обо мне</a></li>
                     <li><a href="#info-contact-container">Контактные данные</a></li>
                 </td>
